--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -5,8 +5,7 @@ name: loki-worker-k8s
 type: charm
 assumes:
   - k8s-api
-  # Juju 3.0.3+ needed for secrets and open-port
-  - juju >= 3.0.3
+  - juju >= 3.5.0
 
 summary: Loki for Kubernetes clusters.
 description: |
@@ -47,26 +46,18 @@ requires:
     description: |
       Enables sending traces to the tracing backend
 
-storage:
-  data:
-    type: filesystem
-    description: Common storage point for all components
-  recovery-data:
-    type: filesystem
-    description: Recovery data root for all components
 
-# The Loki coordinator has a hardcoded dependency on the mount location,
-# and it relies on this path to generate the configuration.
-# Any changes to this path may affect the coordinator's functionality.
+storage:
+  loki-persisted:
+    type: filesystem
+    description: Mount point in which Loki will store data.
 
 containers:
   loki:
     resource: loki-image
     mounts:
-      - storage: data
-        location: /data
-      - storage: recovery-data
-        location: /recovery-data
+      - storage: loki-persisted
+        location: /loki/persisted
 
 resources:
   loki-image:
