first implementation of generic worker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,12 @@ asyncio_mode = "auto"
 line-length = 99
 target-version = ["py38"]
 
-# Linting tools configuration
 [tool.ruff]
 line-length = 99
+extend-exclude = ["__pycache__", "*.egg_info"]
+
+# Linting tools configuration
+[tool.ruff.lint]
 select = ["E", "W", "F", "C", "N", "D", "I001"]
 extend-ignore = [
     "D105",  # Missing docstring in magic method
@@ -34,10 +37,9 @@ extend-ignore = [
     "D413",
 ]
 ignore = ["E501", "D107"]
-extend-exclude = ["__pycache__", "*.egg_info"]
 per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.pyright]
