--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps =
     ruff
 commands =
     black {[vars]all_path}
-    ruff --fix {[vars]all_path}
+    ruff check --fix {[vars]all_path}
 
 [testenv:lint]
 description = Check code against coding style standards
@@ -41,7 +41,7 @@ commands =
     # uncomment the following line if this charm owns a lib
     # codespell {[vars]lib_path}
     codespell .
-    ruff {[vars]all_path}
+    ruff check {[vars]all_path}
     black --check --diff {[vars]all_path}
 
 [testenv:static-{charm, lib}]
@@ -57,6 +57,7 @@ description = Run unit tests
 deps =
     pytest
     coverage[toml]
+    jsonschema
     -r{toxinidir}/requirements.txt
 commands =
     coverage run --source={[vars]src_path} \
