--- a/tox.ini
+++ b/tox.ini
@@ -90,9 +90,9 @@ deps =
     pytest-operator
     -r{toxinidir}/requirements.txt
 commands =
-     # pytest -v \
-     #       -s \
-     #       --tb native \
-     #       --log-cli-level=INFO \
-     #       {posargs} \
-     #       {[vars]tst_path}/integration
+    pytest -v \
+           -s \
+           --tb native \
+           --log-cli-level=INFO \
+           {posargs} \
+           {[vars]tst_path}/integration
