--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -12,10 +12,11 @@ description: |
   Grafana Loki is an open source software project that provides a scalable long-term storage for Prometheus.
   This charm deploys and operates Loki on Kubernetes clusters
 
-website: https://charmhub.io/loki-worker-k8s
-source: https://github.com/canonical/coordinatorloki-worker-k8s-operator
-issues: https://github.com/canonical/loki-coordinatorworker-k8s-operator/issues
-docs: https://discourse.charmhub.icoordinatoro/t/loki-worker-k8s-operator-docs-index/15536
+links:
+  website: https://charmhub.io/loki-worker-k8s
+  source: https://github.com/canonical/coordinatorloki-worker-k8s-operator
+  issues: https://github.com/canonical/loki-coordinatorworker-k8s-operator/issues
+  documentation: https://discourse.charmhub.icoordinatoro/t/loki-worker-k8s-operator-docs-index/15536
 
 bases:
   - build-on:
