feat: migrate to ci v1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,37 @@
+# Copyright 2024 Canonical Ltd.
+# See LICENSE file for licensing details.
+[project]
+name = "loki-worker-k8s"
+version = "0.0"
+requires-python = "~=3.8"
+
+dependencies = [
+  "ops",
+  "cosl",
+  "lightkube",
+  "lightkube-models",
+  "cryptography",
+  "jsonschema",
+  "pydantic>=2",
+  "opentelemetry-exporter-otlp-proto-http",
+]
+
+[project.optional-dependencies]
+dev = [
+  # Linting
+  "ruff",
+  "codespell",
+  # Static
+  "pyright",
+  # Unit
+  "pytest",
+  "coverage[toml]",
+  "ops[testing]",
+  # Integration
+  "juju",
+  "pytest-operator",
+]
+
 # Testing tools configuration
 [tool.coverage.run]
 branch = true
@@ -9,12 +43,9 @@ show_missing = true
 minversion = "6.0"
 log_cli_level = "INFO"
 asyncio_mode = "auto"
+addopts = "--tb=native --verbose --capture=no --log-cli-level=INFO"
 
 # Formatting tools configuration
-[tool.black]
-line-length = 99
-target-version = ["py38"]
-
 [tool.ruff]
 line-length = 99
 extend-exclude = ["__pycache__", "*.egg_info"]
@@ -43,8 +74,7 @@ per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}
 convention = "google"
 
 [tool.pyright]
-include = ["src"]
-extraPaths = ["lib"]
+extraPaths = ["src", "lib"]
 pythonVersion = "3.8"
 pythonPlatform = "Linux"
 
