--- a/tox.ini
+++ b/tox.ini
@@ -4,95 +4,58 @@
 [tox]
 skipsdist=True
 skip_missing_interpreters = True
-envlist = fmt, lint, static-charm, static-lib, unit, scenario
+envlist = lint, static, unit
 
 [vars]
 src_path = {toxinidir}/src/
 tst_path = {toxinidir}/tests/
-;lib_path = {toxinidir}/lib/charms/operator_name_with_underscores
 all_path = {[vars]src_path} {[vars]tst_path}
+uv_flags = --frozen --isolated --extra=dev
 
 [testenv]
+allowlist_externals = uv
 setenv =
   PYTHONPATH = {toxinidir}:{toxinidir}/lib:{[vars]src_path}
   PYTHONBREAKPOINT=pdb.set_trace
   PY_COLORS=1
 passenv =
   PYTHONPATH
-  CHARM_BUILD_DIR
-  MODEL_SETTINGS
+  CHARM_PATH
 
-[testenv:fmt]
-description = Apply coding style standards to code
-deps =
-    black
-    ruff
+[testenv:lock]
+description = Update uv.lock with the latest deps
 commands =
-    black {[vars]all_path}
-    ruff check --fix {[vars]all_path}
+  uv lock --upgrade --no-cache
 
 [testenv:lint]
-description = Check code against coding style standards
-deps =
-    black
-    ruff
-    codespell
+description = Lint the code
 commands =
-    # uncomment the following line if this charm owns a lib
-    # codespell {[vars]lib_path}
-    codespell .
-    ruff check {[vars]all_path}
-    black --check --diff {[vars]all_path}
+    uv run {[vars]uv_flags} ruff check {[vars]all_path}
 
-[testenv:static-{charm, lib}]
-description = Run static analysis checks
-deps =
-  pyright
-  -r {toxinidir}/requirements.txt
+[testenv:static]
+description = Run static checks
+allowlist_externals =
+  {[testenv]allowlist_externals}
+  /usr/bin/env
 commands =
-  charm: pyright
+    uv run {[vars]uv_flags} pyright {[vars]all_path}
+
+[testenv:fmt]
+description = "Format the code"
+commands =
+    uv run {[vars]uv_flags} ruff check --fix-only {[vars]all_path}
 
 [testenv:unit]
 description = Run unit tests
-deps =
-    pytest
-    coverage[toml]
-    jsonschema
-    -r{toxinidir}/requirements.txt
+allowlist_externals=
+    {[testenv]allowlist_externals}
+    /usr/bin/env
 commands =
-    coverage run --source={[vars]src_path} \
-                 -m pytest \
-                 --tb native \
-                 -v \
-                 -s \
-                 {posargs} \
-                 {[vars]tst_path}/unit
-    coverage report
-
-[testenv:scenario]
-description = Scenario tests
-deps =
-    coverage[toml]
-    pytest
-    ops-scenario>=5
-    -r{toxinidir}/requirements.txt
-commands =
-    coverage run \
-      --source={[vars]src_path} \
-      -m pytest -v --tb native --log-cli-level=INFO -s {posargs} {[vars]tst_path}/scenario
-    coverage report
+    uv run {[vars]uv_flags} coverage run --source={[vars]src_path} -m pytest \
+        {[vars]tst_path}/unit {posargs}
+    uv run {[vars]uv_flags} coverage report
 
 [testenv:integration]
 description = Run integration tests
-deps =
-    pytest
-    juju
-    pytest-operator
-    -r{toxinidir}/requirements.txt
 commands =
-    pytest -v \
-           -s \
-           --tb native \
-           --log-cli-level=INFO \
-           {posargs} \
-           {[vars]tst_path}/integration
+    uv run {[vars]uv_flags} pytest --exitfirst {[vars]tst_path}/integration {posargs}
