use the uv plugin

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,47 +1,34 @@
 # Copyright 2024 Canonical Ltd.
 # See LICENSE file for licensing details.
-
 name: loki-worker-k8s
 type: charm
-assumes:
-  - k8s-api
-  - juju >= 3.4.5
-
 summary: Loki for Kubernetes clusters.
 description: |
   Grafana Loki is an open source software project that provides a scalable long-term storage for Prometheus.
   This charm deploys and operates Loki on Kubernetes clusters
 
 links:
+  documentation: https://discourse.charmhub.io/t/loki-worker-k8s-operator-docs-index/15536
   website: https://charmhub.io/loki-worker-k8s
   source: https://github.com/canonical/loki-worker-k8s-operator
   issues: https://github.com/canonical/loki-worker-k8s-operator/issues
-  documentation: https://discourse.charmhub.io/t/loki-worker-k8s-operator-docs-index/15536
 
-bases:
-  - build-on:
-    - name: ubuntu
-      channel: "22.04"
-    run-on:
-    - name: ubuntu
-      channel: "22.04"
+assumes:
+  - k8s-api
+  - juju >= 3.4.5
+
+platforms:
+  ubuntu@22.04:amd64:
 
 parts:
   charm:
-    charm-binary-python-packages:
-      - "pydantic>=2"
-      - "cryptography"
-      - "jsonschema"
-
-requires:
-  loki-cluster:
-    interface: loki_cluster
-    limit: 1
-
-storage:
-  loki-persisted:
-    type: filesystem
-    description: Mount point in which Loki will store data.
+    source: .
+    plugin: uv
+    build-packages: [git]
+    build-snaps: [astral-uv]
+    override-build: |
+      craftctl default
+      git describe --always > $CRAFT_PART_INSTALL/version
 
 containers:
   loki:
@@ -56,18 +43,45 @@ resources:
     description: OCI image for Grafana Loki
     upstream-source: docker.io/ubuntu/loki:3.0-22.04
 
+storage:
+  loki-persisted:
+    type: filesystem
+    description: Mount point in which Loki will store data.
+
+requires:
+  loki-cluster:
+    interface: loki_cluster
+    optional: true
+    limit: 1
+    description: |
+      Integrate with a coordinator charm to receive a config and be part 
+      of a Loki HA cluster.
+
+
 # Based on: https://grafana.com/docs/loki/latest/get-started/deployment-modes/#simple-scalable
 config:
   options:
     role-read:
       type: boolean
       default: false
+      description: |
+        Enable the 'read' meta-role for Loki. This enables the following components:
+        Query Frontend, Querier.
     role-write:
       type: boolean
       default: false
+      description: |
+        Enable the 'write' meta-role for Loki. This enables the following components:
+        Distributor, Ingester.
     role-backend:
       type: boolean
       default: false
+      description: |
+        Enable the 'backend' meta-role for Loki. This enables the following components:
+        Compactor, Index Gateway, Query Scheduler, Ruler.
     role-all:
       type: boolean
       default: false
+      description: |
+        Enables all the default roles for Loki.
+
