--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,8 @@ requires-python = "~=3.8"
 
 dependencies = [
   "ops",
-  # FIXME: use cosl from pypi
-  "cosl@git+https://github.com/canonical/cos-lib@migrate-coord-workers",
-  # FIXME: use coordinated-worker from pypi
-  "coordinated-workers@git+https://github.com/canonical/cos-coordinated-workers@migrate-coord-workers",
+  "cosl>=1.0",
+  "coordinated-workers",
   "pydantic>=2",
   "opentelemetry-exporter-otlp-proto-http",
 ]
