--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ version = "0.0"
 requires-python = "~=3.8"
 
 dependencies = [
-  "coordinated-workers>=2.0.14",
+  "coordinated-workers",
 ]
 
 [project.optional-dependencies]
