--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,14 @@
 [project]
 name = "loki-worker-k8s"
 version = "0.0"
-requires-python = "~=3.8"
+requires-python = "~=3.10"
 
 dependencies = [
-  "coordinated-workers",
+  # "coordinated-workers",
+  # TODO: UPDATE coordinated-workers depedency to pypi package bvefore merging
+  "coordinated-workers @ git+https://github.com/canonical/cos-coordinated-workers.git@feature/mesh",
+  "charmed-service-mesh-helpers>=0.2.0",
+  "lightkube-extensions@git+https://github.com/canonical/lightkube-extensions.git@0.1.0",
 ]
 
 [project.optional-dependencies]
