--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,12 @@
 [project]
 name = "loki-worker-k8s"
 version = "0.0"
-requires-python = "~=3.8"
+requires-python = "~=3.10"
 
 dependencies = [
   "coordinated-workers",
+  "charmed-service-mesh-helpers>=0.2.0",
+  "lightkube-extensions",
 ]
 
 [project.optional-dependencies]
